--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
       </article>
 
       <!-- 2 -->
-      <article class="card" data-name="kitinan kantakad">
+      <article class="card" data-name="kitinan kanthakat">
         <div class="avatar-wrap">
           <span class="ring" aria-hidden="true"></span>
-          <img class="avatar" loading="lazy" src="team-members/images/kitinan.jpg" alt="Kitinan Kantakad">
+          <img class="avatar" loading="lazy" src="team-members/images/kitinan.jpg" alt="Kitinan Kanthakat">
         </div>
         <h3>Kitinan Kanthakat</h3>
         <p>Coffee man</p>
