--- a/team-members/kitinan.html
+++ b/team-members/kitinan.html
@@ -54,7 +54,7 @@
           name: "Kitinan Kanthakat",
           title: "นักศึกษาวิศวกรรมเมคคาทรอนิกส์",
           location: "เชียงใหม่, ไทย",
-          avatar: "team-members/images/kitinan.jpg",
+          avatar: "https://github.com/kittinunr-blip/team-B-8_lungs/blob/main/team-members/images/kitinan.jpg",
           bio: "สวัสดีครับ/ค่ะ ฉันชอบสร้างสิ่งประดิษฐ์, เขียนโค้ด และทดลองควบคุมระบบอัตโนมัติแบบสนุก ๆ.",
           email: "you@example.com",
           phone: "+66 8x-xxx-xxxx",
